# matchertext

./: .gitignore  Makefile  README.md  go.mod  go.sum  minml
LLVM/: .gitignore  CMakeLists.txt  Metrics.md  ReadMe.md  main.cpp
LLVM/include/: AtomicString.hpp  MatcherText.hpp  Parser.hpp  Stats.hpp
LLVM/src/: Parser.cpp  Stats.cpp
LLVM/tests/: basic_literals.cpp  comments_and_relaxed.cpp  raw_and_adjacent.cpp
devtools/: README.md
devtools/minml-preview/: .gitignore  .prettierignore  CHANGELOG.md  README.md  package-lock.json  package.json
devtools/minml-preview/media/: jsconfig.json  main.js  reset.css  vscode.css
devtools/minml-preview/src/: extension.ts
doc/: .gitignore  Makefile  abs.tex  bg.tex  concl.tex  design.tex  embed.tex  eval.tex  host.tex  impl.tex  intro.tex  lang.bib  langs.tex  main.tex  net.bib  rel.tex  sec.bib  soc.bib
doc/fig/: territorial-integrity.eps  territorial-integrity.odg
go/: go.mod
go/internal/util/: io.go
go/markup/ast/: ast.go  enc.go  enc_test.go  transform.go  transform_test.go
go/markup/html/: enc.go  enc_test.go  entities.go  entities.sh  tree.go  tree_test.go
go/markup/minml/: ast.go  ast_test.go  convert.go  dec.go  dec_test.go  entities.go  escape.go  parse.go  parse_test.go  syntax.go  transform.go  transform_test.go  treeparser.go  treeparser_test.go  treewriter.go  treewriter_test.go
go/markup/minml/cmd/: convert.go  minml.go  server.go
go/markup/minml/cmd/server_structs/: build_target.go  http_wrappers.go  sse_clients.go
go/markup/xml/: enc.go  enc_test.go  escape.go  syntax.go  tree.go  tree_test.go  xml.go  xml_test.go
go/matchertext/: parse.go  syntax.go  unmatched.go  unmatched_test.go
go/wasm/: main.go
go/xml/: xml.go
go/xml/ast/: ast.go  enc.go
go/xml/html/: enc.go  enc_test.go  entities.go  entities.sh
go/xml/matchertext/: parse.go
go/xml/minml/: ast.go  parse.go  parse_test.go  syntax.go
go/xml/minml/cmd/: minml.go
go/xml/syntax/: xml.go  xml_test.go
perl/: escapes.pl
raku/: escapes.raku
test/: index.m  index.minml  source.html
